# SkillQuest

./: .editorconfig  .gitignore  CMakeLists.txt  FodyWeavers.xml  SkillQuest.csproj  SkillQuest.sln  export_presets.cfg  project.cmake  project.godot  skillquest.sbproj  steam_appid.txt  vcpkg.json
Client/: SkillQuest.csproj  (+2 more)
game/client/: CMakeLists.txt
game/client/src/main/cpp/skillquest/application/: ClientEngine.cpp
game/client/src/main/cpp/skillquest/graphics/: GLWindow.cpp
game/shared/: CMakeLists.txt
game/shared/src/main/cpp/skillquest/: sh.api.cpp
game/shared/src/main/cpp/skillquest/application/: Engine.cpp
game/shared/src/main/cpp/skillquest/crypto/cipher/: EVP.cpp  RSA.cpp
game/shared/src/main/cpp/skillquest/crypto/hash/: CRC32.cpp  SHA256.cpp
game/shared/src/main/cpp/skillquest/event/: EventBus.cpp
game/shared/src/main/cpp/skillquest/factory/: CommandsFactory.cpp  EventBusFactory.cpp  LoggerFactory.cpp  NetworkFactory.cpp
game/shared/src/main/cpp/skillquest/input/command/: Alias.cpp  Command.cpp  Commands.cpp
game/shared/src/main/cpp/skillquest/logger/: StreamLogger.cpp  StreamLogger.hpp
game/shared/src/main/cpp/skillquest/network/: Channel.cpp  NetworkController.cpp  Packet.cpp
game/shared/src/main/cpp/skillquest/network/connection/: ClientConnection.cpp  IConnection.cpp  ServerConnection.cpp
game/shared/src/main/cpp/skillquest/network/database/: ChannelDatabase.cpp  NetworkClientDatabase.cpp  NetworkServerDatabase.cpp  PacketDatabase.cpp
game/shared/src/main/cpp/skillquest/network/socket/: Controller.cpp  Controller.hpp
game/shared/src/main/cpp/skillquest/network/socket/connection/: ClientConnection.cpp  ClientConnection.hpp  ServerConnection.cpp  ServerConnection.hpp  keepalive.cpp  keepalive.hpp
game/shared/src/main/cpp/skillquest/network/socket/database/: NetworkClientDatabase.cpp  NetworkClientDatabase.hpp  NetworkServerDatabase.cpp  NetworkServerDatabase.hpp
game/shared/src/main/cpp/skillquest/network/winsock/: Controller.cpp  Controller.hpp
game/shared/src/main/cpp/skillquest/network/winsock/connection/: ClientConnection.cpp  ClientConnection.hpp  ServerConnection.cpp  ServerConnection.hpp
game/shared/src/main/cpp/skillquest/network/winsock/database/: NetworkClientDatabase.cpp  NetworkClientDatabase.hpp  NetworkServerDatabase.cpp  NetworkServerDatabase.hpp
game/shared/src/main/cpp/skillquest/random/: Double.cpp  Integer.cpp  String.cpp
game/shared/src/main/cpp/skillquest/random/noise/: Perlin2D.cpp
game/shared/src/main/cpp/skillquest/stuff/: Stuff.cpp  Thing.cpp
game/shared/src/main/cpp/skillquest/threadpool/: ThreadPool.cpp
game/shared/src/main/cpp/skillquest/util/: convert.cpp  demangle.cpp
game/shared/src/main/inc/skillquest/: base64.hpp  block.hpp  character.hpp  command.hpp  crypto.crc32.hpp  crypto.evp.hpp  crypto.rsa.hpp  crypto.sha256.hpp  crypto.tree.hpp  direction.hpp  event.hpp  glm.hash.hpp  hash.hpp  inventory.hpp  item.hpp  json.hpp  logger.hpp  math.hpp  math.transform.hpp  math.vertex.hpp  network.hpp  platform.hpp  property.hpp  random.hpp  sh.api.hpp  sh.export.hpp  string.hpp  stuff.component.hpp  stuff.doohickey.hpp  stuff.hpp  stuff.multiextendable.hpp  stuff.thing.hpp  threadpool.hpp  uid.hpp  uri.hpp  world.hpp
game/shared/src/main/inc/skillquest/application/: Engine.hpp
game/shared/src/main/inc/skillquest/crypto/cipher/: EVP.hpp
game/shared/src/main/inc/skillquest/crypto/hash/: CRC32.hpp
game/shared/src/main/inc/skillquest/event/: EventBus.hpp  EventListener.hpp  IEvent.hpp
game/shared/src/main/inc/skillquest/factory/: CommandsFactory.hpp  EventBusFactory.hpp  LoggerFactory.hpp  NetworkFactory.hpp
game/shared/src/main/inc/skillquest/logger/: ILogger.hpp
game/shared/src/main/inc/skillquest/math/: direction.hpp
game/shared/src/main/inc/skillquest/network/: Address.hpp  Channel.hpp  NetworkController.hpp  Packet.hpp  PacketListener.hpp
game/shared/src/main/inc/skillquest/network/connection/: ClientConnection.hpp  Connection.hpp  IConnection.hpp  ServerConnection.hpp
game/shared/src/main/inc/skillquest/network/database/: ChannelDatabase.hpp  NetworkClientDatabase.hpp  NetworkServerDatabase.hpp  PacketDatabase.hpp
game/shared/src/main/inc/skillquest/random/: String.hpp
game/shared/src/main/inc/skillquest/random/noise/: Perlin2D.hpp
game/shared/src/main/inc/skillquest/stuff/: Component.hpp  Doohickey.hpp  IComponent.hpp  IDoohickey.hpp  IStuff.hpp  IThing.hpp  MultiExtendable.hpp  Stuff.hpp  Thing.hpp
game/shared/src/main/inc/skillquest/threadpool/: ThreadPool.hpp
game/shared/src/main/inc/skillquest/util/: accessor.hpp  demangle.hpp  platform.hpp  serialize.hpp  uid.hpp
omnisudo/: CMakeLists.txt
omnisudo/hpp/omnisudo/: property.h++  tmp.h++
platform/desktop/: CMakeLists.txt
platform/desktop/src/main/cpp/: main.cpp
platform/desktop/src/main/cpp/skillquest/client/game/: SkillQuest.cpp  SkillQuest.hpp
skillquest/engine/client/graphics/api/: CMakeLists.txt
skillquest/engine/client/graphics/opengl/: CMakeLists.txt
skillquest/engine/server/core/: CMakeLists.txt
skillquest/engine/shared/api/: CMakeLists.txt
skillquest/engine/shared/api/cpp/skillquest/engine/random/: Double.cpp  Integer.cpp  String.cpp
skillquest/engine/shared/api/hpp/skillquest/: base64.hpp  crypto.crc32.hpp  crypto.evp.hpp  crypto.hpp  crypto.rsa.hpp  crypto.sha256.hpp  json.hpp  math.vertex.hpp  platform.hpp  random.hpp  string.hpp  uid.hpp
skillquest/engine/shared/api/hpp/skillquest/engine/api/: side.h++
skillquest/engine/shared/api/hpp/skillquest/engine/logger/: Logger.hpp
skillquest/engine/shared/api/hpp/skillquest/engine/math/: Vertex.hpp
skillquest/engine/shared/api/hpp/skillquest/engine/random/: Delaunator.hpp  Double.hpp  Integer.hpp
skillquest/engine/shared/api/hpp/skillquest/engine/util/: convert.hpp  serialize.hpp  side.h++  tostring.hpp
(+674 files in other folders)
